# converters

./: .gitignore  README.md  lcax-2.6.1-cp310-abi3-manylinux_2_34_x86_64.whl  pyproject.toml
data/: becd_20240926.csv  becd_20240926.json  carbenmats_0.2.0_full.csv  carbenmats_0.2.0_full.json  slice_20240319.json  structural_panda_20240716.csv  structural_panda_20240716.json
src/: becd.py  carbenmats.py  logging.yaml  slice.py  structural_panda.py
src/becd/: becd.py  mapping.json
src/carbenmats/: carbenmats.py  mapping.json
src/slice/: SLiCE_element-class_BB-SfB_NRMS3.csv  element_class_mapping.json  mapping.json  slice.py  split.py
src/structural_panda/: mapping.json  structural_panda.py
