[project]
name = "gbdi-converters"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "iso3166>=2.1.1",
    "lcax",
    #    "lcax>=2.6.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.uv.sources]
lcax = { path = "lcax-2.6.1-cp310-abi3-manylinux_2_34_x86_64.whl" }
